<resources>
    <string name="app_name">B Rentals</string>
    <string name="Home_Page">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register Page</string>
    <string name="Username_enter">Username</string>
    <string name="Email_address">Email Address</string>
    <string name="Password_enter">Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Login_in">Login</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="Comment_section">Live Chat</string>
    <string name="LogOut">LogOut</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="title_activity_main_campus">MainCampusActivity</string>
    <string name="title_activity_college_campus">CollegeCampusActivity</string>
    <string name="title_activity_bike_adapter">BikeAdapter</string>
    <string name="title_activity_main_campus_adapter">MainCampusAdapter</string>
    <string name="title_activity_rental_detail_view">RentalDetailView</string>
    <string name="title_activity_button_livechattest">ButtonLivechattest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_tests">Map</string>
    <string name="title_activity_returns_rentals">ReturnsRentals</string>
    <string name="title_activity_returns_rentals_college_street">ReturnsRentalsCollegeStreet
    </string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_help">Help</string>



</resources>
