<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.example.bryan.bike_retnalapp.LoginActivity"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Login here:"
        android:id="@+id/textView3"
        android:textSize="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLoginTextbox"
        android:hint="@string/Username_enter"
        android:layout_marginTop="20dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/passwordLoginTextbox"
        android:hint="@string/Password_enter" />


    <Button
        android:background="@drawable/button_shape"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton"
        android:text="@string/Login_in"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or"
        android:gravity="center"/>

    <Button
        android:background="@drawable/button_shape"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateAccountButton"
        android:text="@string/Sign_Up"/>


</LinearLayout>
